--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Яндекс.Дом</title>
-        <link
-            rel="preload"
-            as="font"
-            href="assets/lato.woff2"
-            type="font/woff2"
-            crossorigin="anonymous"
-        />
+        <link rel="preload" href="assets/Background.webp" as="image">
     </head>
     <body>
         <div id="app"></div>
+        <!-- defer -->
         <script type="module" src="./src/main.jsx"></script>
+        <!-- chunks unused js -->
+        <!-- decompose and optimize main -->
     </body>
 </html>
